--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "react-scripts build && gh-pages -d build"
+    "add-domain": "echo \"spiraldreamsband.com\" > build/CNAME",
+    "deploy": "react-scripts build && npm run add-domain && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
